Finalizando el CRUD - propiedades, vendedores

--- a/src/scss/internas/_admin.scss
+++ b/src/scss/internas/_admin.scss
@@ -67,3 +67,11 @@
 .iniciar-sesion {
     max-width: 60rem;
 }
+
+.admin-botones {
+    @include m.tablet {
+        display: flex;
+        justify-content: center;
+        gap: 2rem;
+    }
+}
