--- a/src/scss/base/_botones.scss
+++ b/src/scss/base/_botones.scss
@@ -16,6 +16,16 @@
     }
 }
 
+.boton-amarilloR {
+    width: 100%;
+    @include m.boton(v.$amarillo, block);
+
+    @include m.tablet {
+        width: auto;
+        display: inline-block;
+    }
+}
+
 .boton-rojo {
     @include m.boton(v.$rojo, block);
 }
